--- a/src/components/chart.scss
+++ b/src/components/chart.scss
@@ -1,9 +1,13 @@
 .chart{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
     padding: 10px 10vw;
     // margin: 30px 0;
     border-radius: 10px;
     width: 80vw;
-    height: 100vh;
+    height: 97vh;
     background-color: #e9845830;
     
 }
@@ -12,6 +16,7 @@
 
 
 // LINE CHART COMPONENT
+
 .chart-tooltip {
     background-color: rgba(255, 255, 255, 0.8); 
     border-radius: 4px; 
