--- a/src/components/nav.scss
+++ b/src/components/nav.scss
@@ -1,20 +1,32 @@
 .nav{
     display:flex;
-    justify-content: space-between;
     align-items: center;
+    justify-content: center;
     width: 100%;
     padding: 10px 5px;
     border-radius: 5px;
     flex-wrap: wrap;
     background-color: aliceblue;
 
-    li{
-        list-style-type: none;
+    ul{
+        display:flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        max-width: 200px;
+        padding: 5px 0;
 
-        a{
-            text-decoration: none;
-            font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            font-size: 1.2rem;
+        li{
+            list-style-type: none;
+    
+            a{
+                text-decoration: none;
+                font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                font-size: 1.2rem;
+            }
         }
+
     }
+
+    
 }
